--- a/ros2_ws/Dockerfile
+++ b/ros2_ws/Dockerfile
@@ -138,3 +138,12 @@ COPY --from=ros2-control / /
 
 # start as ROS user
 USER ${USER}
+
+# Metadata
+ARG VERSION
+ARG BASE_TAG
+LABEL org.opencontainers.image.title="AICA ROS2 image"
+LABEL org.opencontainers.image.description="AICA base ROS2 image (includes ros2_control)"
+LABEL org.opencontainers.image.version="${VERSION}"
+LABEL org.opencontainers.image.base.name="docker.io/library/ros:${BASE_TAG}"
+LABEL tech.aica.image.metadata='{"type":"base/ws","base":{"name":"docker.io/library/ros","version":"'${BASE_TAG}'"}}'
