simplify devcontainer metadata

--- a/ros2_ws/Dockerfile
+++ b/ros2_ws/Dockerfile
@@ -153,7 +153,4 @@ LABEL org.opencontainers.image.description="AICA base ROS 2 image (includes ros2
 LABEL org.opencontainers.image.version="${VERSION}"
 LABEL org.opencontainers.image.base.name="${BASE_IMAGE}:${BASE_TAG}"
 LABEL tech.aica.image.metadata='{"type":"base/ws","base":{"name":"${BASE_IMAGE}:${BASE_TAG}","version":"${VERSION}"}}'
-LABEL devcontainer.metadata='[{ \
-  "containerUser": "ros2", \
-  "mounts": [ "source=${localWorkspaceFolder}/source,target=/home/ros2/ws/src,type=bind,consistency=cached" ], \
-}]'
+LABEL devcontainer.metadata='[{"containerUser": "ros2"}]'
