fix: build args and metadata variables
* Redeclare build args before final metadata layer

* Use single quotes to escape varibales to be replaced in metadata

--- a/ros2_ws/Dockerfile
+++ b/ros2_ws/Dockerfile
@@ -147,9 +147,13 @@ USER ${USER}
 WORKDIR ${ROS2_WORKSPACE}
 
 # Metadata
+ARG BASE_IMAGE=docker.io/library/ros
+ARG BASE_TAG=iron
+ARG ROS_DISTRO=iron
+ARG VERSION=v0.0.0
 LABEL org.opencontainers.image.title="AICA ROS 2 image"
 LABEL org.opencontainers.image.description="AICA base ROS 2 image (includes ros2_control)"
 LABEL org.opencontainers.image.version="${VERSION}"
 LABEL org.opencontainers.image.base.name="${BASE_IMAGE}:${BASE_TAG}"
-LABEL tech.aica.image.metadata='{"type":"base/ws","base":{"name":"${BASE_IMAGE}:${BASE_TAG}","version":"${VERSION}"}}'
+LABEL tech.aica.image.metadata='{"type":"base/ws","base":{"name":"'${BASE_IMAGE}':'${BASE_TAG}'","version":"'${VERSION}'"}}'
 LABEL devcontainer.metadata='[{"containerUser": "ros2"}]'
