ci: fix version build argument

--- a/.github/workflows/reusable-build-push.yml
+++ b/.github/workflows/reusable-build-push.yml
@@ -91,9 +91,9 @@ jobs:
             GIT_TAG=""
           else
             IMAGE_TAGS="${VERSION_TAG},${VERSION_TAG}-${ROS_DISTRO}","${ROS_DISTRO}"
-            GIT_TAG="${VERSION_TAG}-${{ inputs.ros_distro}}"
+            GIT_TAG=${VERSION_TAG}-${ROS_DISTRO}"
           fi
-          BUILD_FLAGS+=(--build-arg VERSION=${GIT_TAG})
+          BUILD_FLAGS+=(--build-arg VERSION=${VERSION_TAG}-${ROS_DISTRO}")
 
           echo "::debug::Using base image tag ${BASE_TAG}"
           echo "Build flags: ${BUILD_FLAGS[@]}"
