--- a/ros2_ws/Dockerfile
+++ b/ros2_ws/Dockerfile
@@ -90,6 +90,7 @@ RUN echo "@realtime        soft    rtprio          99\n@realtime        hard    
 USER ${USER}
 WORKDIR ${HOME}
 RUN wget https://raw.githubusercontent.com/aica-technology/.github/v0.9.0/guidelines/.clang-format
+COPY ./config/config.rviz config.rviz
 RUN mkdir -p ${COLCON_HOME}
 COPY --chown=${USER}:${USER} ./config/colcon ${COLCON_HOME}
 RUN /bin/bash ${COLCON_HOME}/setup.sh
